# tam-sam

./: .env.example  .gitignore  git-untrack.ps1  pyproject.toml  requirements-dev.txt
.githooks/: commit-msg  pre-commit  prepare-commit-msg
.github/workflows/: test.yml
AutoScaleX Pro 2.2/: .gitignore  ADMIN_COMMANDS.md  ARCHITECTURE_AND_SCENARIOS.md  BOTFATHER_COMMANDS.txt  BOTFATHER_SETUP.md  BOT_DESCRIPTION.txt  BOT_LOGIC.md  CONTRIBUTING.md  DEPLOY_VPS.md  FEATURES.txt  GRID_FREE_LEVELS.md  GRID_PROTECTION.md  ORDER_EXECUTION_LOGIC.md  PRIORITIES.md  QUICKSTART.md  README.md  SELL_REBALANCING.md  START.md  TAIL_GRID_AND_VWAP.md  TELEGRAM_DESCRIPTION.txt  buy_position.py  config.py  env.example  error_handling.py  exchange.py  grid_protection.py  handlers.py  install.bat  install.ps1  main.py  order_manager.py  persistence.py  rebalance.py  referral_system.py  requirements.txt  run_tests.bat  start.bat  statistics.py  structured_logging.py  tail_grid.py  (+2 more)
AutoScaleX Pro 2.2/scripts/: fix_profit_bank_ksm.py
AutoScaleX Pro 2.2/tests/: __init__.py  test_buy_position.py  test_config.py  test_error_handling.py  test_exchange.py  test_fix_profit_bank_ksm.py  test_grid_free_levels.py  test_grid_protection_rebalance.py  test_handlers.py  test_main.py  test_order_manager.py  test_pending_hedge.py  test_persistence.py  test_referral_system.py  test_statistics.py  test_structured_logging.py  test_tail_grid.py  test_telegram_bot.py  test_trading_bot_main_loop.py  test_trading_integration.py  test_vwap_tail_matrix.py
scripts/: commit_policy.py
