[project]
name = "autoscalex-pro"
version = "2.2.0"
description = "Торговый бот BingX Spot: Grid Trading, Pyramiding, DCA. Управление через Telegram."
readme = "AutoScaleX Pro 2.2/README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "AutoScaleX" }]
keywords = ["trading", "bot", "bingx", "grid", "telegram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-telegram-bot>=20.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["AutoScaleX Pro 2.2/tests"]

[tool.ruff]
line-length = 200
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
extend-ignore = ["E501"]  # длинные log-сообщения

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Менее строгая проверка для модулей с Telegram API (много Optional)
[[tool.mypy.overrides]]
module = "telegram_bot"
disable_error_code = ["union-attr"]
